# coinbasechain

./: .clang-tidy  .dockerignore  .gitignore  ADDITIONAL_ADVERSARIAL_TESTS.md  ADVANCED_REORG_SCENARIOS.md  ADVERSARIAL_TESTING_COMPLETE.md  ADVERSARIAL_TESTING_RESULTS.md  ANCHORS_COMPLETE.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  ARGS_COMPARISON.md  ATTACK_CODE_POLICY_DECISION.md  ATTEMPT_OUTBOUND_REVIEW.md  BITCOIN_CORE_COMPARISON.md  BITCOIN_CORE_SECURITY_COMPARISON.md  BITCOIN_PROTOCOL_COMPLIANCE.md  BITCOIN_PROTOCOL_SECURITY.md  BLOCK_CPP_FIXES_COMPLETE.md  BUG_FIX_SUMMARY.md  BUILD_INSTRUCTIONS.md  CHAIN_DESIGN.md  CHAIN_LIBRARY_ARCHITECTURE.md  CHAIN_LIBRARY_ASSESSMENT.md  CHAIN_SELECTOR_BUGS.md  CHAIN_SIMPLIFICATION.md  CHAIN_THREADING_ANALYSIS.md  CI_CD_STRATEGY.md  CMakeLists.txt  CODEBASE_STRUCTURE.md  COMPILER_SUPPORT.md  CONCURRENCY_ANALYSIS.md  CONFIGURATION_PARAMETERS.md  CONSENSUS_FIXES.md  CONSTANTS_AND_INPUTS_AUDIT.md  CPPCHECK_ANALYSIS.md  CRITICAL_ISSUES.md  CS_MAIN_IMPLEMENTATION_PLAN.md  DEAD_CODE_ANALYSIS.md  DISABLED_TESTS.md  DOCKER.md  (+109 more)
test/: CMakeLists.txt  INDEX.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  TEST_PLAN.md  addr_manager_tests.cpp  banman_adversarial_tests.cpp  block_index_tests.cpp  block_tests.cpp  build_and_run.sh  catch_amalgamated.cpp  chain_tests.cpp  chainparams_tests.cpp  dos_protection_tests.cpp  header_sync_adversarial_tests.cpp  header_sync_tests.cpp  invalidateblock_tests.cpp  orphan_basic_tests.cpp  orphan_dos_tests.cpp  orphan_edge_case_tests.cpp  orphan_integration_tests.cpp  orphan_security_tests.cpp  persistence_tests.cpp  pow_tests.cpp  reorg_tests.cpp  security_attack_simulations.cpp  stress_threading_tests.cpp  test_chainstate_manager.hpp  test_logging.cpp  threading_tests.cpp  timedata_tests.cpp.bak  uint_tests.cpp  validation_tests.cpp
test/chain/: invalidateblock_chain_tests.cpp  orphan_dos_tests.cpp  orphan_edge_case_tests.cpp  orphan_integration_tests.cpp  stress_threading_tests.cpp
test/data/chain_10/: headers.json
test/data/chain_15/: headers.json
test/data/chain_20/: headers.json
test/data/chain_25/: headers.json
test/data/chain_30/: headers.json
test/data/chain_35/: headers.json
test/data/chain_40/: headers.json
test/data/chain_45/: headers.json
test/data/chain_5/: headers.json
test/data/chain_50/: headers.json
test/functional/: basic_mining.py  debug_sequential_mining.py  debug_sync_issue.py  feature_chainstate_persistence.py  feature_chaos_convergence.py  feature_concurrent_peer_validation.py  feature_concurrent_stress.py  feature_fork_resolution.py  feature_ibd_restart_resume.py  feature_multinode_sync.py  feature_suspicious_reorg.py  generate_test_chain.py  generate_test_chains.py  p2p_batching.py  p2p_connect.py  p2p_dos_headers.py  p2p_eviction.py  p2p_ibd.py  p2p_reorg.py  p2p_three_nodes.py  regenerate_chain_12000.py  regenerate_test_chains.py  rpc_setban.py  test_miner_fix.py  test_minimal_suspicious.py  test_runner.py  test_two_nodes.py
test/functional/test_framework/: test_node.py  util.py
test/integration/: banman_adversarial_tests.cpp  header_sync_adversarial_tests.cpp  invalidateblock_tests.cpp  orphan_dos_tests.cpp  orphan_edge_case_tests.cpp  orphan_integration_tests.cpp  security_attack_simulations.cpp  security_quick_tests.cpp  stress_threading_tests.cpp
test/network/: BLOCK_ANNOUNCEMENT_TEST_PLAN.md  INTEGRATION_PLAN.md  README.md  TESTING_GUIDE.md  TESTING_GUIDELINES.md  TEST_RESULTS.md  addr_manager_tests2.cpp  anchors_integration_tests.cpp  attack_simulated_node.cpp  attack_simulated_node.hpp  attack_simulation_tests.cpp  banman_adversarial_tests.cpp  block_announcement_edge_case_tests.cpp  block_announcement_peer_states_tests.cpp  block_announcement_tests.cpp  connection_limit_tests.cpp  duplicate_test.cpp  feeler_anchor_tests.cpp  feeler_connection_tests.cpp  handshake_edge_case_tests.cpp  headers_sync_tests.cpp  inbound_slot_attack_proof.cpp  inbound_slot_defense_tests.cpp  invalidateblock_functional_tests.cpp  low_work_headers_test.cpp  malformed_message_tests.cpp  malicious_behaviors.hpp  message_dispatcher_tests.cpp  misbehavior_penalty_tests.cpp  multi_peer_sync_tests.cpp  nat_manager_tests.cpp  network_bridged_transport.cpp  network_bridged_transport.hpp  network_component_tests.cpp  network_edge_case_tests.cpp  network_observer.hpp  network_test_helpers.hpp  network_tests.cpp  notifications_tests.cpp  peer_adversarial_tests.cpp  (+16 more)
test/network/addr/: getaddr_multi_node_tests.cpp  getaddr_router_tests.cpp
test/network/backup_simplified_protocol/: simulated_node.cpp  simulated_node.hpp
test/network/block_announcement/: basic_tests.cpp  block_relay_comprehensive_tests.cpp  block_relay_policy_tests.cpp  core_aligned_smoke_tests.cpp  edge_case_tests.cpp  integration_tests.cpp  (+1 more)
test/security/: security_quick_tests.cpp
test/unit/: addr_manager_tests.cpp  anchor_manager_behavior_tests.cpp  banman_discouraged_cap_tests.cpp  banman_tests.cpp  banman_whitelist_tests.cpp  block_index_tests.cpp  block_manager_defensive_tests.cpp  block_manager_tests.cpp  block_tests.cpp  chain_selector_candidate_tests.cpp  chain_selector_tests.cpp  chain_tests.cpp  chainparams_tests.cpp  chainstate_contextual_tests.cpp  chainstate_manager_tests.cpp  chainstate_p2_tests.cpp  connection_types_tests.cpp  files_tests.cpp  header_sync_preverack_integration_tests.cpp  ibd_resume_tests.cpp  message_gating_comprehensive_tests.cpp  message_router_tests.cpp  message_tests.cpp  miner_start_stop_tests.cpp  miner_template_tests.cpp  miner_tests.cpp  network_header_sync_edge_tests.cpp  network_header_sync_tests.cpp  notification_tests.cpp  orphan_basic_tests.cpp  peer_manager_tests.cpp  persistence_tests.cpp  post_ibd_inv_sync_tests.cpp  pow_tests.cpp  pre_verack_message_gating_tests.cpp  protocol_tests.cpp  reorg_multi_node_tests.cpp  reorg_tests.cpp  threading_tests.cpp  timedata_additional_tests.cpp  (+3 more)
test/util/: threadsafe_containers_tests.cpp
tools/attack_node/: CMakeLists.txt  README.md  attack_node.cpp
tools/node_simulator/: CMakeLists.txt  README.md  node_simulator.cpp
(+324 files in other folders)
